--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^7.6.1",
+    "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jade": "^1.11.0",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongo-sanitize": "^1.1.0",
     "mongoose": "^5.11.10",
     "nanoid": "^3.1.20",
-    "nodemailer": "^6.4.17",
+    "nodemailer": "^6.7.2",
     "uuid": "^8.3.2"
   }
 }
