--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^5.11.10",
     "nanoid": "^3.1.20",
     "nodemailer": "^6.7.2",
+    "react": "^17.0.2",
     "uuid": "^8.3.2"
   }
 }
